--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,6 +1,6 @@
 .logo{
     height: 4rem;
-    width: 5rem;
+    width: 4rem;
     position: relative;
     margin:0 auto;
 }
@@ -8,5 +8,6 @@
 .logo__img{
     height: 100%;
     width: 100%;
+     border-radius: 100%;
 }
 
